--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -8,13 +8,13 @@
     <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
-            {% if tables['subs'].rows %}
-                <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-subs">{{ _('sub events')|uc_first }} {{ tables['subs']|format_tab_number }}</a></li>
+            {% if tables.subs.rows %}
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-subs">{{ _('sub events')|uc_first }} {{ tables.subs|format_tab_number }}</a></li>
             {% endif %}
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number }}</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables.source|format_tab_number }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables.actor|format_tab_number }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-reference">{{ _('reference')|uc_first }} {{ tables.reference|format_tab_number }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables.file|format_tab_number }}</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
@@ -37,9 +37,9 @@
                     <div style="clear:both;"></div>
                 </div>
             </div>
-            {% if tables['subs'].rows %}
+            {% if tables.subs.rows %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-subs">
-                    {{ tables['subs'].display('subs')|safe }}
+                    {{ tables.subs.display('subs')|safe }}
                 </div>
             {% endif %}
             <div class="tab-pane fade" role="tabpanel" id="tab-source">
@@ -49,7 +49,7 @@
                         {{ _('source')|button(url_for('source_insert', origin_id=event.id)) }}
                     </div>
                 {% endif %}
-                {{ tables['source'].display('source')|safe }}
+                {{ tables.source.display('source')|safe }}
             </div>
             <div class="tab-pane fade" role="tabpanel" id="tab-actor">
                 {% if 'contributor'|is_authorized %}
@@ -60,7 +60,7 @@
                     {% endfor %}
                 </div>
                 {% endif %}
-                {{ tables['actor'].display('actor')|safe }}
+                {{ tables.actor.display('actor')|safe }}
             </div>
             <div class="tab-pane fade" role="tabpanel" id="tab-reference">
                 {% if 'contributor'|is_authorized %}
@@ -71,7 +71,7 @@
                     {{ _('external reference')|button(url_for('reference_insert', code='external_reference', origin_id=event.id)) }}
                 </div>
                 {% endif %}
-                {{ tables['reference'].display('reference')|safe }}
+                {{ tables.reference.display('reference')|safe }}
             </div>
             <div class="tab-pane fade" role="tabpanel" id="tab-file">
                 {% if 'contributor'|is_authorized %}
@@ -80,7 +80,7 @@
                     {{ _('file')|button(url_for('file_insert', origin_id=event.id)) }}
                 </div>
                 {% endif %}
-                {{ tables['file'].display('file')|safe }}
+                {{ tables.file.display('file')|safe }}
             </div>
         </div>
     </div>
