--- a/openatlas/templates/model/property_view.html
+++ b/openatlas/templates/model/property_view.html
@@ -8,16 +8,16 @@
         <p><strong>{{ _('info')|uc_first }}</strong></p>
         {{ info|display_info }}
     </div>
-    {% if tables['super'].rows %}
+    {% if tables.super.rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('super')|uc_first }}</strong></p>
-            {{ tables['super'].display('super')|safe }}
+            {{ tables.super.display('super')|safe }}
         </div>
     {% endif %}
-    {% if tables['sub'].rows %}
+    {% if tables.sub.rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('subs')|uc_first }}</strong></p>
-            {{ tables['sub'].display('sub')|safe }}
+            {{ tables.sub.display('sub')|safe }}
         </div>
     {% endif %}
     <div style="clear:both"></div>
