--- a/openatlas/templates/object/view.html
+++ b/openatlas/templates/object/view.html
@@ -7,8 +7,8 @@
 <div>
     <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables.source|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables.event|format_tab_number }}</a></li>
     </ul>
     <div class="tab-content">
         <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
@@ -36,7 +36,7 @@
                     {{ _('source')|button(url_for('source_insert', origin_id=object_.id)) }}
                 </div>
             {% endif %}
-            {{ tables['source'].display('source')|safe }}
+            {{ tables.source.display('source')|safe }}
         </div>
         <div class="tab-pane fade" role="tabpanel" id="tab-event">
             {% if 'contributor'|is_authorized %}
@@ -44,7 +44,7 @@
                     {{ 'E9'|get_class_name|button(url_for('event_insert', code='E9', origin_id=object_.id)) }}
                 </div>
             {% endif %}
-            {{ tables['event'].display('event')|safe }}
+            {{ tables.event.display('event')|safe }}
         </div>
     </div>
 </div>
