--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -7,16 +7,16 @@
 <div>
     <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number }}</a></li>
-        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-place">{{ _('place')|uc_first }} {{ tables['place']|format_tab_number }}</a></li>
-        {% for table_name in ['feature', 'stratigraphic-unit', 'find'] %}
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables.source|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-event">{{ _('event')|uc_first }} {{ tables.event|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-actor">{{ _('actor')|uc_first }} {{ tables.actor|format_tab_number }}</a></li>
+        <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-place">{{ _('place')|uc_first }} {{ tables.place|format_tab_number }}</a></li>
+        {% for table_name in ['feature', 'stratigraphic_unit', 'find'] %}
             {% if tables[table_name].rows %}
                 <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number }}</a></li>
             {% endif %}
         {% endfor %}
-        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number }}</a></li>
+        <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-file">{{ _('files')|uc_first }} {{ tables.file|format_tab_number }}</a></li>
     </ul>
     <div class="tab-content">
         <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
@@ -38,10 +38,10 @@
                 <div style="clear:both;"></div>
             </div>
         </div>
-        {% for name in ['source', 'event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find', 'file'] %}
-            {% if name not in ['feature', 'stratigraphic-unit', 'find'] or tables[name].rows %}
+        {% for name in ['source', 'event', 'actor', 'place', 'feature', 'stratigraphic_unit', 'find', 'file'] %}
+            {% if name not in ['feature', 'stratigraphic_unit', 'find'] or tables[name].rows %}
                 <div class="tab-pane fade" role="tabpanel" id="tab-{{name}}">
-                    {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
+                    {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic_unit', 'find'] %}
                         <div class="toolbar">
                             {{ _('add')|button(url_for('reference_add', id_=reference.id, class_name=name)) }}
                             {% if name == 'place' %}
